--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -49,7 +49,7 @@
                                 <td>{{ agent.firstname }}</td>
                                 <td>{{ agent.function }}</td>
                                 <td>{{ agent.team.name }}</td>
-                                <td>{{ agent.roles.0 }}</td>
+                                <td>{{ dump (agent.roles) }}</td>  
                                 <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
                                 <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
                                 <td><a href="{{ path('showHistory', { 'id': agent.id }) }}"><i class="fas fa-history"></i></a></td>
