--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -10,6 +10,7 @@
         <header class="text-center py-3">
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Agents </em></h1>
             <p>Voici la liste des agents</p>
+            <p>{% if is_granted('ROLE_USER') %} je suis agent{%endif%}</p>
         </header>
         <div class="row border border-rounded my-2">
             <div class="col-md-10">
