--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -8,15 +8,16 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Créer un nouvel utilisateur</h1>       
+        <h1>Créer un nouvel Agent</h1>       
         <div class="form-group mb-2">
         {{ form_start(form) }}
-        {{ form_row(form.username) }}
-        {{ form_row(form.email) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
-        <button type="submit">Register!</button>
+        {{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr' : {'placeholder':'Nom d\'utilisateur ...' }}) }}
+        {{ form_row(form.email, {'label': 'Adresse email', 'attr' : {'placeholder':'Email ...' }}) }}
+        {{ form_row(form.plainPassword.first, {'label': 'Mot de passe', 'attr' : {'placeholder':'Mot de passe ...' }}) }}
+        {{ form_row(form.plainPassword.second, {'label': 'Confirmation de mot de passe', 'attr' : {'placeholder':'Répéter le mot de passe ...' }}) }}
+        {{ form_row(form.Envoyer) }}
         {{ form_end(form) }}
+        </div>
     </div> 
 {% endblock %}
 
