--- a/app/Resources/views/agent/edit.html.twig
+++ b/app/Resources/views/agent/edit.html.twig
@@ -8,10 +8,18 @@
 {% block body %}   
     <div class="container">       
         <h1>Modifier l'agent</h1>
-        <form action="{{ path('editAgent', { 'id': agent.id }) }}" method="post" class="form-inline">
-            <div class="form-group mb-2">
-            {{ form_start(form) }}           
-            {{ form_widget(form) }}                         
+        <form action="{{ path('editAgent', { 'id': agent.id }) }}" method="post">
+            <div class="form-group mb-2">                
+            {{ form_start(form) }}
+            {{ form_row(form.name, {'label': 'Nom'}) }}
+            {{ form_row(form.firstname, {'label': 'Prénom'}) }}
+            {{ form_row(form.email, {'label': 'Email'}) }}
+            {{ form_row(form.plainPassword) }}
+            {{ form_row(form.username, {'label': "Nom d'utilisateur"}) }}
+            {{ form_row(form.function, {'label': "Fonction"}) }}
+            {{ form_row(form.nni, {'label': "Nni"}) }}
+            {{ form_row(form.Team, {'label': "Equipe"}) }}
+             {{ form_row(form.roles, {'label': "Roles"}) }}            
             {{ form_rest(form) }}
             {{ form_end(form) }}
             </div            
