--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -56,7 +56,8 @@
                                 <td>
                                     {% if  agent.team %}
                                         {{ agent.team.name }}
-                                    {% endif %}</td>                                
+                                    {% endif %}
+                                </td>
                                 <td>
                                     {% for role in agent.roles %}
                                         <table><tr><td>{{ role }}</td></tr></table>
