--- a/app/Resources/views/agent/edit.html.twig
+++ b/app/Resources/views/agent/edit.html.twig
@@ -13,13 +13,13 @@
             {{ form_start(form) }}
             {{ form_row(form.name, {'label': 'Nom'}) }}
             {{ form_row(form.firstname, {'label': 'Prénom'}) }}
-            {{ form_row(form.email, {'label': 'Email'}) }}
-            {{ form_row(form.plainPassword) }}
-            {{ form_row(form.username, {'label': "Nom d'utilisateur"}) }}
+            {{ form_row(form.email, {'label': 'Email'}) }}            
             {{ form_row(form.function, {'label': "Fonction"}) }}
             {{ form_row(form.nni, {'label': "Nni"}) }}
+             {{ form_row(form.username, {'label': "Nom d'utilisateur"}) }}
+              {{ form_row(form.plainPassword, {'label': "Mot de passe"}) }}
             {{ form_row(form.Team, {'label': "Equipe"}) }}
-             {{ form_row(form.roles, {'label': "Roles"}) }}            
+            {{ form_row(form.roles, {'label': "Roles"}) }}            
             {{ form_rest(form) }}
             {{ form_end(form) }}
             </div            
