--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -9,23 +9,24 @@
     <div class= "row">
         {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
-        <div class="col-md-12">
-            <form action="{{ path('login') }}" method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="_password" />
-
-                {#
-                    If you want to control the URL the user
-                    is redirected to on success (more details below)
-                    <input type="hidden" name="_target_path" value="/account" />
-                #}
-
-                <button type="submit">login</button>
-            </form>
+        {% endif %} 
+             <form action="{{ path('login') }}" method="post">
+                <div class="form-group mb-2">
+                    <label for="username">Nom d'utilisateur:</label>
+                    <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="Entrez votre nom d'utilisateur"/>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="password">Mot de passe:</label>
+                    <input type="password" id="password" name="_password"placeholder="Entrez votre mot de passe" />
+                </div>
+                    {#
+                        If you want to control the URL the user
+                        is redirected to on success (more details below)
+                        <input type="hidden" name="_target_path" value="/account" />
+                    #}
+                    <button type="submit" class="btn btn-primary">Se connecter</button>
+                </div>
+             </form>
         </div>
     </div>
 </div> 
