--- a/app/Resources/views/team/create.html.twig
+++ b/app/Resources/views/team/create.html.twig
@@ -3,6 +3,7 @@
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>
 {% endblock %}
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
 {% block title %}Welcome!{% endblock %}
 
 {% block body %}   
@@ -11,8 +12,8 @@
             <div class="form-group mb-2">
             {{ form_start(form, {'action': path('create_team'), 'method': 'POST'}) }} 
             {{ form_row(form.name, {'label': 'Nom d\'utilisateur', 'attr' : {'placeholder':'Nom d\'utilisateur ...' }}) }}
-            {{ form_row(form.Event, {'label': 'Evenements' }) }}
-            {{ form_row(form.Section, {'label': 'section' }) }}           
+            {{ form_row(form.Event, {'label': 'Evenement' }) }}
+            {{ form_row(form.Section, {'label': 'Section' }) }}           
             {{ form_row(form.Envoyer) }}
             {{ form_end(form) }}        
             </div>        
