--- a/app/Resources/views/history/show.html.twig
+++ b/app/Resources/views/history/show.html.twig
@@ -38,7 +38,7 @@
                                 <td>{{ history.agent.name }}</td>
                                 <td>{{ history.letter.letter }}</td>                                
                                 <td>{{ history.valideur.name }}</td>
-                                <td>{{ history.dateChange|localizeddate('full', 'none', 'fr', null, 'E dd MMM Y  H:m')}}</td>
+                                <td>{{ history.dateChange|localizeddate('full', 'none', 'fr', null, 'E dd MMM Y  H:mm')}}</td>
                             </tr>
                         {% endfor %}                       
                     </tbody>
