--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -9,7 +9,7 @@
 <div class="container bg-light">
     <header class="text-center py-3">
         <h1 class="bg-white-semi_transparent"><em class="text-dark"></em>Agenda</h1>
-        <p>Consulter, modifier, imprimer la planning de vos équipes</p>
+        <p>Consulter, modifier, imprimer la planning de vos équipes</p>        
     </header>
       
     <form action="{{ path('showAgenda') }}" method="post" class="form-control mb-2 bg-menu shadow-lg" >
@@ -21,15 +21,9 @@
         {{ form_end(form) }}
     </form>    
 </div>
-<div class="container">
-    <div class="row border border-rounded mb-2 shadow-lg">
-        <div class="col-md-4">            
-            <span id="buttonPrint">
-            </span>
-        </div>
-    </div> 
+<div class="container">    
     <div class= "row">
-        <div class="col-md-12">
+        <div class="col-md-12">            
             <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                 <caption class="text-center">Equipe {% if team %} {{ team.name }} du {{ startDate|localizeddate('none', 'none', 'fr', null, 'EE d MMMM y')}} au  {{ endDate|localizeddate('none', 'none', 'fr', null, ' E d MMMM y')}} {% endif %}</caption>
                 <thead class="thead">
@@ -46,12 +40,7 @@
                         </th>
                     </tr>
                     <tr class ="bg-dark">
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" colspan="6" class="text-info" id="buttonPrint" ></th>                        
                         {% for dateBetween in dateBetweens %}
                         <th scope ="col" class="text-light">
                             {% if dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 6 %}
