--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -16,18 +16,18 @@
         <button class="btn btn-primary shadow-lg" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
             <span><i class="fas fa-search"></i></span><span> </span>
         </button>
-        <button class="btn btn-primary shadow-lg" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             <span><i class="fas fa-step-backward"></i></span><span> </span>
-        </button>
-        <button class="btn btn-primary shadow-lg" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        </a>
+        <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             <span><i class="fas fa-step-forward"></i></span><span> </span>
-    </button>
+        </a>        
     </p>
     <div class="collapse" id="collapseExample">        
         <form action="{{ path('showAgenda') }}" method="post" class="form-control mb-2 bg-menu shadow-lg" >
         {{ form_start(form) }} 
         {{ form_row(form.startDate, {'label': 'Date de début', 'attr' : {'placeholder':'Entrez une date ...' }}) }}
-        {{ form_row(form.interval, {'label': 'Interval'}) }}
+        {{ form_row(form.interval, {'label': 'Nombre de semaines', 'attr' : {'placeholder':'Entrez une date ...' }}) }}
         {{ form_row(form.Team, {'label': 'Equipe', 'attr' : {'placeholder':'Selectionnez une équipe ...' }}) }}         
         {{ form_rest(form) }}
         {{ form_end(form) }}
